docs/6.24.0/users/_sources/usingdakota/reference/method-multilevel_sampling-solution_mode-offline_pilot.rst.txt
.. _method-multilevel_sampling-solution_mode-offline_pilot:

"""""""""""""
offline_pilot
"""""""""""""


Specify a solution mode that excludes the pilot cost from sample allocation logic


.. toctree::
   :hidden:
   :maxdepth: 1

   method-multilevel_sampling-solution_mode-offline_pilot-final_statistics


**Specification**

- *Alias:* None

- *Arguments:* None


**Child Keywords:**

+-------------------------+--------------------+----------------------+-----------------------------------------------+
| Required/Optional       | Description of     | Dakota Keyword       | Dakota Keyword Description                    |
|                         | Group              |                      |                                               |
+=========================+====================+======================+===============================================+
| Optional                                     | `final_statistics`__ | Indicate the type of final statistics to be   |
|                                              |                      | returned by a UQ method                       |
+----------------------------------------------+----------------------+-----------------------------------------------+

.. __: method-multilevel_sampling-solution_mode-offline_pilot-final_statistics.html



**Description**


Multilevel / multifidelity sampling methods are adaptive
UQ methods that utilize a pilot sample to estimate an initial set of
correlations or variances, and then augment the pilot with additional
sample increments to optimally allocate resources.  In this mode, the
cost of pilot sampling is treated as offline cost and is excluded from
the optimal sample allocation logic.  This mode is typically used for
generating reference performance using an "oracle" approach, i.e.,
specifying a large pilot sample in order to obtain best-case
correlation or variance estimates prior to generating a sample profile.


